compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__ascii_as_unicode_escape_sequence.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\npub fn y() -> String {\n  \"\\u{79}\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn y() -> String {
  "\u{79}"
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Y() gleam_P.String_t {
  return "\U00000079"
}
