compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__case.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\nfn go(a) {\n  case a {\n    \"\" -> 0\n    \"one\" -> 1\n    \"two\" -> 2\n    _ -> 3\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(a) {
  case a {
    "" -> 0
    "one" -> 1
    "two" -> 2
    _ -> 3
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(a gleam_P.String_t) gleam_P.Int_t {
  if gleam_P.Bool_t(a.Equal("")) {
    return 0
  } else if gleam_P.Bool_t(a.Equal("one")) {
    return 1
  } else if gleam_P.Bool_t(a.Equal("two")) {
    return 2
  } else {
    return 3
  }
}
