compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__discard_concat_rest_pattern.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> _ -> Nil\n    _ -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " <> _ -> Nil
    _ -> Nil
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  "strings"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Go(x gleam_P.String_t) gleam_P.Nil_t {
  if gleam_P.Bool_t(strings.HasPrefix(string(x), "Hello, ")) {
    return gleam_P.Nil_c{}
  } else {
    return gleam_P.Nil_c{}
  }
}
