compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__equality.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\nfn go(a) {\n  a == \"ok\"\n  a != \"ok\"\n  a == a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(a) {
  a == "ok"
  a != "ok"
  a == a
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(a gleam_P.String_t) gleam_P.Bool_t {
  _ = gleam_P.Bool_t(a.Equal("ok"))
  _ = gleam_P.Bool_t(!a.Equal("ok"))
  return gleam_P.Bool_t(a.Equal(a))
}
