compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__string_literals.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\nfn go() {\n  \"Hello, Gleam!\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  "Hello, Gleam!"
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.String_t {
  return "Hello, Gleam!"
}
