compiler-core/src/go/tests/snapshots/gleam_core__go__tests__strings__string_patterns.snap
---
source: compiler-core/src/go/tests/strings.rs
expression: "\nfn go(x) {\n  let assert \"Hello\" = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert "Hello" = x
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.String_t) gleam_P.String_t {
  if gleam_P.Bool_t(!x.Equal("Hello")) {
    panic(gleam_P.MakeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      map[string]any{"value": x },
    ))
  }
  return x
}
